# SimpleGuiToolkit

./: Cargo.toml  LICENSE.txt  README.md
experiment/: Cargo.toml
experiment/src/: main.rs
sgt_core/: Cargo.toml
sgt_core/src/: application.rs  lib.rs  window.rs
sgt_core/src/renderer/: mod.rs  wgpu.rs
sgt_core/src/window/: mod.rs  winit.rs
sgt_wgpu/: Cargo.toml
sgt_wgpu/src/: lib.rs
sgt_winit/: Cargo.toml
sgt_winit/src/: lib.rs
sgt_winit/tests/: gui.rs
