[package]
name = "sgt_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
sgt_winit = { path = "../sgt_winit", optional = true }

[features]
default = ["winit"]
winit = ["sgt_winit"]
